koala_yacc.output
Terminals unused in grammar

   ELLIPSIS
   NOT
   TOKEN_THIS
   IN
   CASE
   BREAK
   CONTINUE
   DEFAULT
   CONST
   HEX
   OCT
   OP
   IFX
   NO_CODE_BLOCK


Grammar

    0 $accept: program $end

    1 qualified_name: ID
    2               | qualified_name '.' ID

    3 type_name_list: type_name
    4               | type_name_list ',' type_name

    5 type_name: primitive_type
    6          | qualified_name
    7          | array_type
    8          | function_type
    9          | INTERFACE '{' '}'

   10 primitive_type: UINT8
   11               | UINT16
   12               | UINT32
   13               | UINT64
   14               | INT8
   15               | INT16
   16               | INT32
   17               | INT64
   18               | FLOAT32
   19               | FLOAT64
   20               | BOOL
   21               | STRING

   22 function_type: FUNC '(' ')'
   23              | FUNC '(' ')' return_type_list
   24              | FUNC '(' type_name_list ')'
   25              | FUNC '(' type_name_list ')' return_type_list

   26 array_type: '[' INTEGER ']' type_name

   27 return_type_list: type_name
   28                 | '(' type_name_list ')'

   29 program: package_statement import_statements declarations
   30        | package_statement import_statements
   31        | package_statement declarations
   32        | import_statements declarations
   33        | package_statement
   34        | import_statements
   35        | declarations

   36 package_statement: PACKAGE qualified_name ';'

   37 import_statements: import_statement
   38                  | import_statements import_statement

   39 import_statement: IMPORT qualified_name ';'
   40                 | IMPORT qualified_name '.' '*' ';'

   41 declarations: type_declaration
   42             | declarations type_declaration
   43             | variable_declaration
   44             | declarations variable_declaration
   45             | function_declaration
   46             | declarations function_declaration
   47             | method_declaration
   48             | declarations method_declaration

   49 type_declaration: TYPE ID STRUCT '{' field_declarations '}'
   50                 | TYPE ID INTERFACE '{' interface_function_declarations '}'
   51                 | TYPE ID type_name ';'

   52 field_declarations: ID type_name ';'
   53                   | field_declarations ID type_name ';'

   54 interface_function_declarations: interface_function_declaration
   55                                | interface_function_declarations interface_function_declaration

   56 interface_function_declaration: ID '(' ')' ';'
   57                               | ID '(' ')' return_type_list ';'
   58                               | ID '(' type_name_list ')' ';'
   59                               | ID '(' type_name_list ')' return_type_list ';'
   60                               | ID '(' parameter_list ')' ';'
   61                               | ID '(' parameter_list ')' return_type_list ';'

   62 parameter_list: ID type_name
   63               | parameter_list ',' ID type_name

   64 function_declaration: FUNC ID '(' ')' code_block
   65                     | FUNC ID '(' ')' return_type_list code_block
   66                     | FUNC ID '(' parameter_list ')' code_block
   67                     | FUNC ID '(' parameter_list ')' return_type_list code_block

   68 anonymous_function_declaration: FUNC '(' ')' code_block
   69                               | FUNC '(' ')' return_type_list code_block
   70                               | FUNC '(' parameter_list ')' code_block
   71                               | FUNC '(' parameter_list ')' return_type_list code_block

   72 method_declaration: FUNC ID '.' ID '(' ')' code_block
   73                   | FUNC ID '.' ID '(' ')' return_type_list code_block
   74                   | FUNC ID '.' ID '(' parameter_list ')' code_block
   75                   | FUNC ID '.' ID '(' parameter_list ')' return_type_list code_block

   76 code_block: '{' local_variable_declaration_statements '}'
   77           | '{' '}'

   78 local_variable_declaration_statements: local_variable_declaration_statement
   79                                      | local_variable_declaration_statements local_variable_declaration_statement

   80 local_variable_declaration_statement: variable_declaration
   81                                     | statement

   82 statement: expression_statement ';'
   83          | selection_statement
   84          | iteration_statemnet
   85          | jump_statement

   86 selection_statement: if_statement
   87                    | switch_statement

   88 if_statement: IF '(' base_expression ')' code_block
   89             | IF '(' base_expression ')' code_block ELSE else_statemnet

   90 else_statemnet: if_statement
   91               | code_block

   92 switch_statement: SWITCH '(' base_expression ')' code_block

   93 iteration_statemnet: WHILE '(' base_expression ')' code_block
   94                    | DO code_block WHILE '(' base_expression ')' ';'
   95                    | FOR '(' for_init for_expr for_incr ')' code_block

   96 for_init: expression_statement ';'
   97         | variable_declaration
   98         | ';'

   99 for_expr: base_expression ';'
  100         | ';'

  101 for_incr: expression_statement

  102 jump_statement: RETURN ';'
  103               | RETURN expression_list ';'

  104 variable_declaration: VAR var_list type_name ';'
  105                     | VAR var_list '=' expression_list ';'
  106                     | VAR var_list type_name '=' expression_list ';'

  107 var_list: ID
  108         | var_list ',' ID

  109 array_complex_primary: '(' base_expression ')'
  110                      | array_access
  111                      | field_access
  112                      | method_call

  113 array_access: qualified_name '[' base_expression ']'
  114             | array_complex_primary '[' base_expression ']'

  115 field_access: just_not_name '.' ID

  116 method_call: method_access '(' argument_list ')'
  117            | method_access '(' ')'

  118 method_access: complex_primary
  119              | qualified_name

  120 argument_list: expression_list

  121 initializer_expression: '{' '}'
  122                       | '{' expression_list '}'
  123                       | '{' field_initial_list '}'
  124                       | '{' array_initial_list '}'
  125                       | qualified_name '{' '}'
  126                       | qualified_name '{' expression_list '}'
  127                       | qualified_name '{' field_initial_list '}'
  128                       | array_type '{' '}'
  129                       | array_type '{' expression_list '}'
  130                       | array_type '{' array_initial_list '}'
  131                       | anonymous_function_declaration
  132                       | primitive_type '(' base_expression ')'

  133 field_initial_list: ID ':' expression
  134                   | field_initial_list ',' ID ':' expression

  135 array_initial_list: INTEGER ':' expression
  136                   | array_initial_list ',' INTEGER ':' expression

  137 primary_expression: qualified_name
  138                   | constant
  139                   | just_not_name

  140 just_not_name: '(' base_expression ')'
  141              | complex_primary

  142 complex_primary: array_access
  143                | field_access
  144                | method_call

  145 constant: INTEGER
  146         | FLOAT
  147         | STRING_LITERAL
  148         | TOKEN_NIL
  149         | TOKEN_TRUE
  150         | TOKEN_FALSE

  151 postfix_expression: primary_expression
  152                   | postfix_expression INC
  153                   | postfix_expression DEC

  154 unary_expression: postfix_expression
  155                 | INC unary_expression
  156                 | DEC unary_expression
  157                 | '+' unary_expression
  158                 | '-' unary_expression
  159                 | '~' unary_expression
  160                 | '!' unary_expression

  161 multiplicative_expression: unary_expression
  162                          | multiplicative_expression '*' unary_expression
  163                          | multiplicative_expression '/' unary_expression
  164                          | multiplicative_expression '%' unary_expression

  165 additive_expression: multiplicative_expression
  166                    | additive_expression '+' multiplicative_expression
  167                    | additive_expression '-' multiplicative_expression

  168 shift_expression: additive_expression
  169                 | shift_expression SHIFT_LEFT additive_expression
  170                 | shift_expression SHIFT_RIGHT additive_expression

  171 relational_expression: shift_expression
  172                      | relational_expression '<' shift_expression
  173                      | relational_expression '>' shift_expression
  174                      | relational_expression LE shift_expression
  175                      | relational_expression GE shift_expression

  176 equality_expression: relational_expression
  177                    | equality_expression EQ relational_expression
  178                    | equality_expression NE relational_expression

  179 and_expression: equality_expression
  180               | and_expression '&' equality_expression

  181 exclusive_or_expression: and_expression
  182                        | exclusive_or_expression '^' and_expression

  183 inclusive_or_expression: exclusive_or_expression
  184                        | inclusive_or_expression '|' exclusive_or_expression

  185 logical_and_expression: inclusive_or_expression
  186                       | logical_and_expression AND inclusive_or_expression

  187 logical_or_expression: logical_and_expression
  188                      | logical_or_expression OR logical_and_expression

  189 base_expression: logical_or_expression

  190 expression: base_expression
  191           | initializer_expression

  192 expression_list: expression
  193                | expression_list ',' expression

  194 assignment_expression: assignment_variable_list '=' expression_list
  195                      | assignment_variable compound_assignment_operator base_expression

  196 assignment_variable_list: assignment_variable
  197                         | assignment_variable_list ',' assignment_variable

  198 assignment_variable: qualified_name
  199                    | array_access
  200                    | field_access

  201 compound_assignment_operator: ADD_ASSIGN
  202                             | SUB_ASSIGN
  203                             | MUL_ASSIGN
  204                             | DIV_ASSIGN
  205                             | MOD_ASSIGN
  206                             | AND_ASSIGN
  207                             | OR_ASSIGN
  208                             | XOR_ASSIGN
  209                             | RIGHT_ASSIGN
  210                             | LEFT_ASSIGN

  211 expression_statement: base_expression
  212                     | assignment_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 160
'%' (37) 164
'&' (38) 180
'(' (40) 22 23 24 25 28 56 57 58 59 60 61 64 65 66 67 68 69 70 71 72
    73 74 75 88 89 92 93 94 95 109 116 117 132 140
')' (41) 22 23 24 25 28 56 57 58 59 60 61 64 65 66 67 68 69 70 71 72
    73 74 75 88 89 92 93 94 95 109 116 117 132 140
'*' (42) 40 162
'+' (43) 157 166
',' (44) 4 63 108 134 136 193 197
'-' (45) 158 167
'.' (46) 2 40 72 73 74 75 115
'/' (47) 163
':' (58) 133 134 135 136
';' (59) 36 39 40 51 52 53 56 57 58 59 60 61 82 94 96 98 99 100 102
    103 104 105 106
'<' (60) 172
'=' (61) 105 106 194
'>' (62) 173
'[' (91) 26 113 114
']' (93) 26 113 114
'^' (94) 182
'{' (123) 9 49 50 76 77 121 122 123 124 125 126 127 128 129 130
'|' (124) 184
'}' (125) 9 49 50 76 77 121 122 123 124 125 126 127 128 129 130
'~' (126) 159
error (256)
ELLIPSIS (258)
ADD_ASSIGN (259) 201
SUB_ASSIGN (260) 202
MUL_ASSIGN (261) 203
DIV_ASSIGN (262) 204
MOD_ASSIGN (263) 205
AND_ASSIGN (264) 206
OR_ASSIGN (265) 207
XOR_ASSIGN (266) 208
RIGHT_ASSIGN (267) 209
LEFT_ASSIGN (268) 210
EQ (269) 177
NE (270) 178
GE (271) 175
LE (272) 174
AND (273) 186
OR (274) 188
NOT (275)
SHIFT_LEFT (276) 169
SHIFT_RIGHT (277) 170
INC (278) 152 155
DEC (279) 153 156
TOKEN_THIS (280)
IF (281) 88 89
ELSE (282) 89
WHILE (283) 93 94
DO (284) 94
FOR (285) 95
IN (286)
SWITCH (287) 92
CASE (288)
BREAK (289)
CONTINUE (290)
DEFAULT (291)
VAR (292) 104 105 106
FUNC (293) 22 23 24 25 64 65 66 67 68 69 70 71 72 73 74 75
RETURN (294) 102 103
STRUCT (295) 49
INTERFACE (296) 9 50
TYPE (297) 49 50 51
CONST (298)
PACKAGE (299) 36
IMPORT (300) 39 40
INT8 (301) 14
INT16 (302) 15
INT32 (303) 16
INT64 (304) 17
UINT8 (305) 10
UINT16 (306) 11
UINT32 (307) 12
UINT64 (308) 13
FLOAT32 (309) 18
FLOAT64 (310) 19
BOOL (311) 20
STRING (312) 21
TOKEN_NIL (313) 148
TOKEN_TRUE (314) 149
TOKEN_FALSE (315) 150
INTEGER (316) 26 135 136 145
HEX (317)
OCT (318)
FLOAT (319) 146
STRING_LITERAL (320) 147
ID (321) 1 2 49 50 51 52 53 56 57 58 59 60 61 62 63 64 65 66 67 72
    73 74 75 107 108 115 133 134
OP (322)
IFX (323)
NO_CODE_BLOCK (324)


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
qualified_name (94)
    on left: 1 2, on right: 2 6 36 39 40 113 119 125 126 127 137 198
type_name_list (95)
    on left: 3 4, on right: 4 24 25 28 58 59
type_name (96)
    on left: 5 6 7 8 9, on right: 3 4 26 27 51 52 53 62 63 104 106
primitive_type (97)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21, on right: 5 132
function_type (98)
    on left: 22 23 24 25, on right: 8
array_type (99)
    on left: 26, on right: 7 128 129 130
return_type_list (100)
    on left: 27 28, on right: 23 25 57 59 61 65 67 69 71 73 75
program (101)
    on left: 29 30 31 32 33 34 35, on right: 0
package_statement (102)
    on left: 36, on right: 29 30 31 33
import_statements (103)
    on left: 37 38, on right: 29 30 32 34 38
import_statement (104)
    on left: 39 40, on right: 37 38
declarations (105)
    on left: 41 42 43 44 45 46 47 48, on right: 29 31 32 35 42 44 46
    48
type_declaration (106)
    on left: 49 50 51, on right: 41 42
field_declarations (107)
    on left: 52 53, on right: 49 53
interface_function_declarations (108)
    on left: 54 55, on right: 50 55
interface_function_declaration (109)
    on left: 56 57 58 59 60 61, on right: 54 55
parameter_list (110)
    on left: 62 63, on right: 60 61 63 66 67 70 71 74 75
function_declaration (111)
    on left: 64 65 66 67, on right: 45 46
anonymous_function_declaration (112)
    on left: 68 69 70 71, on right: 131
method_declaration (113)
    on left: 72 73 74 75, on right: 47 48
code_block (114)
    on left: 76 77, on right: 64 65 66 67 68 69 70 71 72 73 74 75 88
    89 91 92 93 94 95
local_variable_declaration_statements (115)
    on left: 78 79, on right: 76 79
local_variable_declaration_statement (116)
    on left: 80 81, on right: 78 79
statement (117)
    on left: 82 83 84 85, on right: 81
selection_statement (118)
    on left: 86 87, on right: 83
if_statement (119)
    on left: 88 89, on right: 86 90
else_statemnet (120)
    on left: 90 91, on right: 89
switch_statement (121)
    on left: 92, on right: 87
iteration_statemnet (122)
    on left: 93 94 95, on right: 84
for_init (123)
    on left: 96 97 98, on right: 95
for_expr (124)
    on left: 99 100, on right: 95
for_incr (125)
    on left: 101, on right: 95
jump_statement (126)
    on left: 102 103, on right: 85
variable_declaration (127)
    on left: 104 105 106, on right: 43 44 80 97
var_list (128)
    on left: 107 108, on right: 104 105 106 108
array_complex_primary (129)
    on left: 109 110 111 112, on right: 114
array_access (130)
    on left: 113 114, on right: 110 142 199
field_access (131)
    on left: 115, on right: 111 143 200
method_call (132)
    on left: 116 117, on right: 112 144
method_access (133)
    on left: 118 119, on right: 116 117
argument_list (134)
    on left: 120, on right: 116
initializer_expression (135)
    on left: 121 122 123 124 125 126 127 128 129 130 131 132, on right:
    191
field_initial_list (136)
    on left: 133 134, on right: 123 127 134
array_initial_list (137)
    on left: 135 136, on right: 124 130 136
primary_expression (138)
    on left: 137 138 139, on right: 151
just_not_name (139)
    on left: 140 141, on right: 115 139
complex_primary (140)
    on left: 142 143 144, on right: 118 141
constant (141)
    on left: 145 146 147 148 149 150, on right: 138
postfix_expression (142)
    on left: 151 152 153, on right: 152 153 154
unary_expression (143)
    on left: 154 155 156 157 158 159 160, on right: 155 156 157 158
    159 160 161 162 163 164
multiplicative_expression (144)
    on left: 161 162 163 164, on right: 162 163 164 165 166 167
additive_expression (145)
    on left: 165 166 167, on right: 166 167 168 169 170
shift_expression (146)
    on left: 168 169 170, on right: 169 170 171 172 173 174 175
relational_expression (147)
    on left: 171 172 173 174 175, on right: 172 173 174 175 176 177
    178
equality_expression (148)
    on left: 176 177 178, on right: 177 178 179 180
and_expression (149)
    on left: 179 180, on right: 180 181 182
exclusive_or_expression (150)
    on left: 181 182, on right: 182 183 184
inclusive_or_expression (151)
    on left: 183 184, on right: 184 185 186
logical_and_expression (152)
    on left: 185 186, on right: 186 187 188
logical_or_expression (153)
    on left: 187 188, on right: 188 189
base_expression (154)
    on left: 189, on right: 88 89 92 93 94 99 109 113 114 132 140 190
    195 211
expression (155)
    on left: 190 191, on right: 133 134 135 136 192 193
expression_list (156)
    on left: 192 193, on right: 103 105 106 120 122 126 129 193 194
assignment_expression (157)
    on left: 194 195, on right: 212
assignment_variable_list (158)
    on left: 196 197, on right: 194 197
assignment_variable (159)
    on left: 198 199 200, on right: 195 196 197
compound_assignment_operator (160)
    on left: 201 202 203 204 205 206 207 208 209 210, on right: 195
expression_statement (161)
    on left: 211 212, on right: 82 96 101


State 0

    0 $accept: . program $end

    VAR      shift, and go to state 1
    FUNC     shift, and go to state 2
    TYPE     shift, and go to state 3
    PACKAGE  shift, and go to state 4
    IMPORT   shift, and go to state 5

    program               go to state 6
    package_statement     go to state 7
    import_statements     go to state 8
    import_statement      go to state 9
    declarations          go to state 10
    type_declaration      go to state 11
    function_declaration  go to state 12
    method_declaration    go to state 13
    variable_declaration  go to state 14


State 1

  104 variable_declaration: VAR . var_list type_name ';'
  105                     | VAR . var_list '=' expression_list ';'
  106                     | VAR . var_list type_name '=' expression_list ';'

    ID  shift, and go to state 15

    var_list  go to state 16


State 2

   64 function_declaration: FUNC . ID '(' ')' code_block
   65                     | FUNC . ID '(' ')' return_type_list code_block
   66                     | FUNC . ID '(' parameter_list ')' code_block
   67                     | FUNC . ID '(' parameter_list ')' return_type_list code_block
   72 method_declaration: FUNC . ID '.' ID '(' ')' code_block
   73                   | FUNC . ID '.' ID '(' ')' return_type_list code_block
   74                   | FUNC . ID '.' ID '(' parameter_list ')' code_block
   75                   | FUNC . ID '.' ID '(' parameter_list ')' return_type_list code_block

    ID  shift, and go to state 17


State 3

   49 type_declaration: TYPE . ID STRUCT '{' field_declarations '}'
   50                 | TYPE . ID INTERFACE '{' interface_function_declarations '}'
   51                 | TYPE . ID type_name ';'

    ID  shift, and go to state 18


State 4

   36 package_statement: PACKAGE . qualified_name ';'

    ID  shift, and go to state 19

    qualified_name  go to state 20


State 5

   39 import_statement: IMPORT . qualified_name ';'
   40                 | IMPORT . qualified_name '.' '*' ';'

    ID  shift, and go to state 19

    qualified_name  go to state 21


State 6

    0 $accept: program . $end

    $end  shift, and go to state 22


State 7

   29 program: package_statement . import_statements declarations
   30        | package_statement . import_statements
   31        | package_statement . declarations
   33        | package_statement .

    VAR     shift, and go to state 1
    FUNC    shift, and go to state 2
    TYPE    shift, and go to state 3
    IMPORT  shift, and go to state 5

    $default  reduce using rule 33 (program)

    import_statements     go to state 23
    import_statement      go to state 9
    declarations          go to state 24
    type_declaration      go to state 11
    function_declaration  go to state 12
    method_declaration    go to state 13
    variable_declaration  go to state 14


State 8

   32 program: import_statements . declarations
   34        | import_statements .
   38 import_statements: import_statements . import_statement

    VAR     shift, and go to state 1
    FUNC    shift, and go to state 2
    TYPE    shift, and go to state 3
    IMPORT  shift, and go to state 5

    $default  reduce using rule 34 (program)

    import_statement      go to state 25
    declarations          go to state 26
    type_declaration      go to state 11
    function_declaration  go to state 12
    method_declaration    go to state 13
    variable_declaration  go to state 14


State 9

   37 import_statements: import_statement .

    $default  reduce using rule 37 (import_statements)


State 10

   35 program: declarations .
   42 declarations: declarations . type_declaration
   44             | declarations . variable_declaration
   46             | declarations . function_declaration
   48             | declarations . method_declaration

    VAR   shift, and go to state 1
    FUNC  shift, and go to state 2
    TYPE  shift, and go to state 3

    $default  reduce using rule 35 (program)

    type_declaration      go to state 27
    function_declaration  go to state 28
    method_declaration    go to state 29
    variable_declaration  go to state 30


State 11

   41 declarations: type_declaration .

    $default  reduce using rule 41 (declarations)


State 12

   45 declarations: function_declaration .

    $default  reduce using rule 45 (declarations)


State 13

   47 declarations: method_declaration .

    $default  reduce using rule 47 (declarations)


State 14

   43 declarations: variable_declaration .

    $default  reduce using rule 43 (declarations)


State 15

  107 var_list: ID .

    $default  reduce using rule 107 (var_list)


State 16

  104 variable_declaration: VAR var_list . type_name ';'
  105                     | VAR var_list . '=' expression_list ';'
  106                     | VAR var_list . type_name '=' expression_list ';'
  108 var_list: var_list . ',' ID

    FUNC       shift, and go to state 31
    INTERFACE  shift, and go to state 32
    INT8       shift, and go to state 33
    INT16      shift, and go to state 34
    INT32      shift, and go to state 35
    INT64      shift, and go to state 36
    UINT8      shift, and go to state 37
    UINT16     shift, and go to state 38
    UINT32     shift, and go to state 39
    UINT64     shift, and go to state 40
    FLOAT32    shift, and go to state 41
    FLOAT64    shift, and go to state 42
    BOOL       shift, and go to state 43
    STRING     shift, and go to state 44
    ID         shift, and go to state 19
    ','        shift, and go to state 45
    '['        shift, and go to state 46
    '='        shift, and go to state 47

    qualified_name  go to state 48
    type_name       go to state 49
    primitive_type  go to state 50
    function_type   go to state 51
    array_type      go to state 52


State 17

   64 function_declaration: FUNC ID . '(' ')' code_block
   65                     | FUNC ID . '(' ')' return_type_list code_block
   66                     | FUNC ID . '(' parameter_list ')' code_block
   67                     | FUNC ID . '(' parameter_list ')' return_type_list code_block
   72 method_declaration: FUNC ID . '.' ID '(' ')' code_block
   73                   | FUNC ID . '.' ID '(' ')' return_type_list code_block
   74                   | FUNC ID . '.' ID '(' parameter_list ')' code_block
   75                   | FUNC ID . '.' ID '(' parameter_list ')' return_type_list code_block

    '.'  shift, and go to state 53
    '('  shift, and go to state 54


State 18

   49 type_declaration: TYPE ID . STRUCT '{' field_declarations '}'
   50                 | TYPE ID . INTERFACE '{' interface_function_declarations '}'
   51                 | TYPE ID . type_name ';'

    FUNC       shift, and go to state 31
    STRUCT     shift, and go to state 55
    INTERFACE  shift, and go to state 56
    INT8       shift, and go to state 33
    INT16      shift, and go to state 34
    INT32      shift, and go to state 35
    INT64      shift, and go to state 36
    UINT8      shift, and go to state 37
    UINT16     shift, and go to state 38
    UINT32     shift, and go to state 39
    UINT64     shift, and go to state 40
    FLOAT32    shift, and go to state 41
    FLOAT64    shift, and go to state 42
    BOOL       shift, and go to state 43
    STRING     shift, and go to state 44
    ID         shift, and go to state 19
    '['        shift, and go to state 46

    qualified_name  go to state 48
    type_name       go to state 57
    primitive_type  go to state 50
    function_type   go to state 51
    array_type      go to state 52


State 19

    1 qualified_name: ID .

    $default  reduce using rule 1 (qualified_name)


State 20

    2 qualified_name: qualified_name . '.' ID
   36 package_statement: PACKAGE qualified_name . ';'

    '.'  shift, and go to state 58
    ';'  shift, and go to state 59


State 21

    2 qualified_name: qualified_name . '.' ID
   39 import_statement: IMPORT qualified_name . ';'
   40                 | IMPORT qualified_name . '.' '*' ';'

    '.'  shift, and go to state 60
    ';'  shift, and go to state 61


State 22

    0 $accept: program $end .

    $default  accept


State 23

   29 program: package_statement import_statements . declarations
   30        | package_statement import_statements .
   38 import_statements: import_statements . import_statement

    VAR     shift, and go to state 1
    FUNC    shift, and go to state 2
    TYPE    shift, and go to state 3
    IMPORT  shift, and go to state 5

    $default  reduce using rule 30 (program)

    import_statement      go to state 25
    declarations          go to state 62
    type_declaration      go to state 11
    function_declaration  go to state 12
    method_declaration    go to state 13
    variable_declaration  go to state 14


State 24

   31 program: package_statement declarations .
   42 declarations: declarations . type_declaration
   44             | declarations . variable_declaration
   46             | declarations . function_declaration
   48             | declarations . method_declaration

    VAR   shift, and go to state 1
    FUNC  shift, and go to state 2
    TYPE  shift, and go to state 3

    $default  reduce using rule 31 (program)

    type_declaration      go to state 27
    function_declaration  go to state 28
    method_declaration    go to state 29
    variable_declaration  go to state 30


State 25

   38 import_statements: import_statements import_statement .

    $default  reduce using rule 38 (import_statements)


State 26

   32 program: import_statements declarations .
   42 declarations: declarations . type_declaration
   44             | declarations . variable_declaration
   46             | declarations . function_declaration
   48             | declarations . method_declaration

    VAR   shift, and go to state 1
    FUNC  shift, and go to state 2
    TYPE  shift, and go to state 3

    $default  reduce using rule 32 (program)

    type_declaration      go to state 27
    function_declaration  go to state 28
    method_declaration    go to state 29
    variable_declaration  go to state 30


State 27

   42 declarations: declarations type_declaration .

    $default  reduce using rule 42 (declarations)


State 28

   46 declarations: declarations function_declaration .

    $default  reduce using rule 46 (declarations)


State 29

   48 declarations: declarations method_declaration .

    $default  reduce using rule 48 (declarations)


State 30

   44 declarations: declarations variable_declaration .

    $default  reduce using rule 44 (declarations)


State 31

   22 function_type: FUNC . '(' ')'
   23              | FUNC . '(' ')' return_type_list
   24              | FUNC . '(' type_name_list ')'
   25              | FUNC . '(' type_name_list ')' return_type_list

    '('  shift, and go to state 63


State 32

    9 type_name: INTERFACE . '{' '}'

    '{'  shift, and go to state 64


State 33

   14 primitive_type: INT8 .

    $default  reduce using rule 14 (primitive_type)


State 34

   15 primitive_type: INT16 .

    $default  reduce using rule 15 (primitive_type)


State 35

   16 primitive_type: INT32 .

    $default  reduce using rule 16 (primitive_type)


State 36

   17 primitive_type: INT64 .

    $default  reduce using rule 17 (primitive_type)


State 37

   10 primitive_type: UINT8 .

    $default  reduce using rule 10 (primitive_type)


State 38

   11 primitive_type: UINT16 .

    $default  reduce using rule 11 (primitive_type)


State 39

   12 primitive_type: UINT32 .

    $default  reduce using rule 12 (primitive_type)


State 40

   13 primitive_type: UINT64 .

    $default  reduce using rule 13 (primitive_type)


State 41

   18 primitive_type: FLOAT32 .

    $default  reduce using rule 18 (primitive_type)


State 42

   19 primitive_type: FLOAT64 .

    $default  reduce using rule 19 (primitive_type)


State 43

   20 primitive_type: BOOL .

    $default  reduce using rule 20 (primitive_type)


State 44

   21 primitive_type: STRING .

    $default  reduce using rule 21 (primitive_type)


State 45

  108 var_list: var_list ',' . ID

    ID  shift, and go to state 65


State 46

   26 array_type: '[' . INTEGER ']' type_name

    INTEGER  shift, and go to state 66


State 47

  105 variable_declaration: VAR var_list '=' . expression_list ';'

    INC             shift, and go to state 67
    DEC             shift, and go to state 68
    FUNC            shift, and go to state 69
    INT8            shift, and go to state 33
    INT16           shift, and go to state 34
    INT32           shift, and go to state 35
    INT64           shift, and go to state 36
    UINT8           shift, and go to state 37
    UINT16          shift, and go to state 38
    UINT32          shift, and go to state 39
    UINT64          shift, and go to state 40
    FLOAT32         shift, and go to state 41
    FLOAT64         shift, and go to state 42
    BOOL            shift, and go to state 43
    STRING          shift, and go to state 44
    TOKEN_NIL       shift, and go to state 70
    TOKEN_TRUE      shift, and go to state 71
    TOKEN_FALSE     shift, and go to state 72
    INTEGER         shift, and go to state 73
    FLOAT           shift, and go to state 74
    STRING_LITERAL  shift, and go to state 75
    ID              shift, and go to state 19
    '{'             shift, and go to state 76
    '('             shift, and go to state 77
    '['             shift, and go to state 46
    '+'             shift, and go to state 78
    '-'             shift, and go to state 79
    '~'             shift, and go to state 80
    '!'             shift, and go to state 81

    qualified_name                  go to state 82
    primitive_type                  go to state 83
    array_type                      go to state 84
    anonymous_function_declaration  go to state 85
    array_complex_primary           go to state 86
    array_access                    go to state 87
    field_access                    go to state 88
    method_call                     go to state 89
    method_access                   go to state 90
    initializer_expression          go to state 91
    primary_expression              go to state 92
    just_not_name                   go to state 93
    complex_primary                 go to state 94
    constant                        go to state 95
    postfix_expression              go to state 96
    unary_expression                go to state 97
    multiplicative_expression       go to state 98
    additive_expression             go to state 99
    shift_expression                go to state 100
    relational_expression           go to state 101
    equality_expression             go to state 102
    and_expression                  go to state 103
    exclusive_or_expression         go to state 104
    inclusive_or_expression         go to state 105
    logical_and_expression          go to state 106
    logical_or_expression           go to state 107
    base_expression                 go to state 108
    expression                      go to state 109
    expression_list                 go to state 110


State 48

    2 qualified_name: qualified_name . '.' ID
    6 type_name: qualified_name .

    '.'  shift, and go to state 58

    $default  reduce using rule 6 (type_name)


State 49

  104 variable_declaration: VAR var_list type_name . ';'
  106                     | VAR var_list type_name . '=' expression_list ';'

    ';'  shift, and go to state 111
    '='  shift, and go to state 112


State 50

    5 type_name: primitive_type .

    $default  reduce using rule 5 (type_name)


State 51

    8 type_name: function_type .

    $default  reduce using rule 8 (type_name)


State 52

    7 type_name: array_type .

    $default  reduce using rule 7 (type_name)


State 53

   72 method_declaration: FUNC ID '.' . ID '(' ')' code_block
   73                   | FUNC ID '.' . ID '(' ')' return_type_list code_block
   74                   | FUNC ID '.' . ID '(' parameter_list ')' code_block
   75                   | FUNC ID '.' . ID '(' parameter_list ')' return_type_list code_block

    ID  shift, and go to state 113


State 54

   64 function_declaration: FUNC ID '(' . ')' code_block
   65                     | FUNC ID '(' . ')' return_type_list code_block
   66                     | FUNC ID '(' . parameter_list ')' code_block
   67                     | FUNC ID '(' . parameter_list ')' return_type_list code_block

    ID   shift, and go to state 114
    ')'  shift, and go to state 115

    parameter_list  go to state 116


State 55

   49 type_declaration: TYPE ID STRUCT . '{' field_declarations '}'

    '{'  shift, and go to state 117


State 56

    9 type_name: INTERFACE . '{' '}'
   50 type_declaration: TYPE ID INTERFACE . '{' interface_function_declarations '}'

    '{'  shift, and go to state 118


State 57

   51 type_declaration: TYPE ID type_name . ';'

    ';'  shift, and go to state 119


State 58

    2 qualified_name: qualified_name '.' . ID

    ID  shift, and go to state 120


State 59

   36 package_statement: PACKAGE qualified_name ';' .

    $default  reduce using rule 36 (package_statement)


State 60

    2 qualified_name: qualified_name '.' . ID
   40 import_statement: IMPORT qualified_name '.' . '*' ';'

    ID   shift, and go to state 120
    '*'  shift, and go to state 121


State 61

   39 import_statement: IMPORT qualified_name ';' .

    $default  reduce using rule 39 (import_statement)


State 62

   29 program: package_statement import_statements declarations .
   42 declarations: declarations . type_declaration
   44             | declarations . variable_declaration
   46             | declarations . function_declaration
   48             | declarations . method_declaration

    VAR   shift, and go to state 1
    FUNC  shift, and go to state 2
    TYPE  shift, and go to state 3

    $default  reduce using rule 29 (program)

    type_declaration      go to state 27
    function_declaration  go to state 28
    method_declaration    go to state 29
    variable_declaration  go to state 30


State 63

   22 function_type: FUNC '(' . ')'
   23              | FUNC '(' . ')' return_type_list
   24              | FUNC '(' . type_name_list ')'
   25              | FUNC '(' . type_name_list ')' return_type_list

    FUNC       shift, and go to state 31
    INTERFACE  shift, and go to state 32
    INT8       shift, and go to state 33
    INT16      shift, and go to state 34
    INT32      shift, and go to state 35
    INT64      shift, and go to state 36
    UINT8      shift, and go to state 37
    UINT16     shift, and go to state 38
    UINT32     shift, and go to state 39
    UINT64     shift, and go to state 40
    FLOAT32    shift, and go to state 41
    FLOAT64    shift, and go to state 42
    BOOL       shift, and go to state 43
    STRING     shift, and go to state 44
    ID         shift, and go to state 19
    ')'        shift, and go to state 122
    '['        shift, and go to state 46

    qualified_name  go to state 48
    type_name_list  go to state 123
    type_name       go to state 124
    primitive_type  go to state 50
    function_type   go to state 51
    array_type      go to state 52


State 64

    9 type_name: INTERFACE '{' . '}'

    '}'  shift, and go to state 125


State 65

  108 var_list: var_list ',' ID .

    $default  reduce using rule 108 (var_list)


State 66

   26 array_type: '[' INTEGER . ']' type_name

    ']'  shift, and go to state 126


State 67

  155 unary_expression: INC . unary_expression

    INC             shift, and go to state 67
    DEC             shift, and go to state 68
    TOKEN_NIL       shift, and go to state 70
    TOKEN_TRUE      shift, and go to state 71
    TOKEN_FALSE     shift, and go to state 72
    INTEGER         shift, and go to state 73
    FLOAT           shift, and go to state 74
    STRING_LITERAL  shift, and go to state 75
    ID              shift, and go to state 19
    '('             shift, and go to state 77
    '+'             shift, and go to state 78
    '-'             shift, and go to state 79
    '~'             shift, and go to state 80
    '!'             shift, and go to state 81

    qualified_name         go to state 127
    array_complex_primary  go to state 86
    array_access           go to state 87
    field_access           go to state 88
    method_call            go to state 89
    method_access          go to state 90
    primary_expression     go to state 92
    just_not_name          go to state 93
    complex_primary        go to state 94
    constant               go to state 95
    postfix_expression     go to state 96
    unary_expression       go to state 128


State 68

  156 unary_expression: DEC . unary_expression
